--- a/NodejsConsoleApp1/ExpressApp1/package.json
+++ b/NodejsConsoleApp1/ExpressApp1/package.json
@@ -11,8 +11,9 @@
   },
   "dependencies": {
     "body-parser": "^1.15.0",
-    "cookie-parser": "^1.4.0",
+    "cookie-parser": "^1.4.5",
     "debug": "^2.2.0",
+    "dotenv": "^8.2.0",
     "express": "^4.14.0",
     "morgan": "^1.7.0",
     "node-spotify-api": "^1.1.1",
